# RBAC-RAG-chatbot

./: .gitignore  readme.MD
backend/: pyproject.toml
backend/src/: main.py
backend/src/agents/: graph.py  nodes.py  prompts.py  states.py
backend/src/agents/vector_store_db/: chroma.sqlite3
backend/src/services/: chatbot.py
frontend/: main.py  pyproject.toml
training/: RAG_intro.ipynb  chatbot_agent.ipynb  pyproject.toml
training/vector_store_db/: chroma.sqlite3
